# stdx

./: Cargo.toml  Makefile  README.md  SECURITY.md
.github/workflows/: ci.yml
src/job_scheduler/: mod.rs
stdx/: Cargo.toml
stdx/src/: lib.rs  mail.rs
stdx/src/crypto/: mod.rs
stdx/src/job_scheduler/: job.rs  mod.rs
stdx_base32/: Cargo.toml
stdx_base32/src/: lib.rs
stdx_crypto/: Cargo.toml
stdx_crypto/crates/libsodium_sys/: Cargo.toml  build.rs
stdx_crypto/crates/libsodium_sys/src/: sodium_bindings.rs
stdx_crypto/crates/libsodium_sys/tests/crypto/: crypto_aead_chacha20poly1305.rs  crypto_auth_hmacsha256.rs  crypto_auth_hmacsha512.rs  crypto_auth_hmacsha512256.rs  crypto_core_hsalsa20.rs  crypto_core_salsa20.rs  crypto_core_salsa2012.rs  crypto_core_salsa208.rs  crypto_generichash.rs  crypto_onetimeauth_poly1305.rs  crypto_pwhash_scryptsalsa208sha256.rs  crypto_scalarmult.rs  crypto_secretbox_xsalsa20poly1305.rs  crypto_shorthash_siphash24.rs  crypto_sign_ed25519.rs  crypto_stream_chacha20.rs  crypto_stream_salsa20.rs  crypto_stream_salsa2012.rs  crypto_stream_salsa208.rs  crypto_stream_xchacha20.rs  crypto_stream_xsalsa20.rs  crypto_verify_16.rs  crypto_verify_32.rs  crypto_verify_64.rs
stdx_crypto/crates/zeroize_derive/src/: lib.rs
stdx_crypto/examples/: aead.rs  hash.rs  password.rs
stdx_crypto/fuzz/: Cargo.toml
stdx_crypto/fuzz/fuzz_targets/: hash_blake2b.rs
stdx_crypto/src/: c.rs  lib.rs  newtype_macros.rs  utils.rs  utils_stdx.rs
stdx_crypto/src/aead/: aead_macros.rs  mod.rs  xchacha20poly1305_ietf.rs
stdx_crypto/src/hash/: mod.rs
stdx_crypto/src/hash/blake2b/: digest.rs  mod.rs
stdx_crypto/src/kdf/: argon2_macros.rs  argon2id.rs  blake2b.rs  mod.rs  scrypt.rs
stdx_crypto/src/kx/: mod.rs  x25519blake2b.rs
stdx_crypto/src/rand/: mod.rs
stdx_crypto/src/sign/: ed25519.rs  mod.rs
stdx_crypto/src/streaming_aead/: mod.rs  xchacha20poly1305.rs
stdx_crypto/src/zeroize/: mod.rs
stdx_otp/: Cargo.toml
stdx_otp/src/: lib.rs  totp.rs
stdx_qrcode/: Cargo.toml
stdx_qrcode/src/: bits.rs  canvas.rs  ec.rs  optimize.rs
stdx_qrcode/src/render/: image.rs  unicode.rs
stdx_saas/: Cargo.toml
stdx_stripe/: Cargo.toml
stdx_taxes/: Cargo.toml
stdx_threadpool/: Cargo.toml
stdx_ulid/: Cargo.toml
stdx_validator/: Cargo.toml
stdx_validator/src/: lib.rs
