[package]
name = "stdx"
description = "The missing pieces of Rust's standard library"
version = "0.1.0"
authors = ["skerkour <sylvain@kerkour.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stdx_base32 = { version = "0.1", path = "../stdx_base32" }
stdx_crypto = { version = "0.1", path = "../stdx_crypto" }
stdx_otp = { version = "0.1", path = "../stdx_otp" }
stdx_qrcode = { version = "0.1", path = "../stdx_qrcode" }
stdx_stripe = { version = "0.1", path = "../stdx_stripe" }
stdx_taxes = { version = "0.1", path = "../stdx_taxes" }
stdx_ulid = { version = "0.1", path = "../stdx_ulid" }
stdx_threadpool = { version = "0.1", path = "../stdx_threadpool" }

ammonia = "3"
atomic = "0.5"
askama_escape = "0.10"
base64 = "0.13"
chrono = { version  = "0.4", features = ["serde"] }
cron = "0.9"
csv = "1"
dotenv = "0.15"
env_logger = "0.8"
futures = "0.3"
hex = "0.4"
image = "0.23"
lazy_static = "1.4"
lettre = { version = "0.10.0-beta.3", default-features = false, features = ["builder"] }
log = "0.4"
num_cpus = "1"
pulldown-cmark = "0.8"
rand = { version = "0.8" }
regex = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "uuid", "json", "postgres", "migrate", "chrono", "time", "ipnetwork" ] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tryhard = "0.3"
uuid = { version = "0.8", features = ["serde", "v4"] }
url = "2"
